--- a/index.html
+++ b/index.html
@@ -14,70 +14,67 @@
     />
   </head>
   <body>
-      <header>
-        <div class="container">
-          <img src="./assets/logo.svg" alt="Logo do blog" />
-          <div class="input-wrapper">
-            <label for="search-bar">Pesquise por Artigos</label>
-            <input
-              type="search"
-              id="search-bar"
-              placeholder="Pesquise por artigos"
-            />
-          </div>
-          <div class="perfil-wrapper">
-            <img src="./assets/perfil.jpeg" alt="Perfil do usuário" />
-          </div>
-        </div>
-      </header>
-      <main>
-        <div class="container">
-          <img
-            src="./assets/main-blog-small.png"
-            alt="Um gato com um por de sol ao fundo"
+    <header>
+      <div class="container">
+        <img src="./assets/logo.svg" alt="Logo do blog" />
+        <div class="input-wrapper">
+          <label for="search-bar">Pesquise por Artigos</label>
+          <input
+            type="search"
+            id="search-bar"
+            placeholder="Pesquise por artigos"
           />
-          <div class="title-wrapper">
-            <h1>Seriam os gatos astronautas?</h1>
-            <div class="btn-wrapper">
-              <img src="./assets/joinha.svg" alt="Gostou? Clique aqui" />
-              <img src="./assets/negativo.svg" alt="Não gostou? Clique aqui" />
-            </div>
-          </div>
-          <section>
-            <p>
-              Os gatos são animais fascinantes e cercados de mistérios. De
-              temperamento independente e misterioso, esses felinos são
-              conhecidos por sua agilidade, elegância e um comportamento muitas
-              vezes imprevisível. Contudo, recentemente, uma teoria tem ganhado
-              espaço na internet e entre teóricos de conspiração: seriam os
-              gatos astronautas?
-            </p>
-            <p>
-              A teoria sugere que os gatos não são animais terrestres, mas sim
-              seres extraterrestres enviados para realizar uma missão específica
-              em nosso planeta. Há relatos históricos que apontam para o fato de
-              que os gatos eram considerados seres sagrados em diferentes
-              culturas e até mesmo associados a figuras divinas. Isso poderia
-              indicar que os gatos têm uma origem muito mais mística do que se
-              pensava anteriormente.
-            </p>
-          </section>
-          <section>
-            <p>
-              Além disso, há teóricos que acreditam que os felinos possuem
-              habilidades telepáticas e são capazes de se comunicar com outras
-              espécies alienígenas. Essa crença baseia-se em relatos de pessoas
-              que afirmam terem visto gatos reagindo a estímulos que não são
-              perceptíveis aos seres humanos, ou até mesmo se comportando de
-              maneira incomum durante eventos astronômicos, como uma aurora
-              boreal. Esses e outros indícios foram interpretados como sinais de
-              que os gatos seriam seres interplanetários.
-            </p>
-          </section>
         </div>
-      </main>
-      <aside>
-        <div class="container">
+        <div class="perfil-wrapper">
+          <img src="./assets/perfil.jpeg" alt="Perfil do usuário" />
+        </div>
+      </div>
+    </header>
+    <main>
+      <div class="container">
+        <img
+          src="./assets/main-blog-small.png"
+          alt="Um gato com um por de sol ao fundo"
+        />
+        <div class="title-wrapper">
+          <h1>Seriam os gatos astronautas?</h1>
+          <div class="btn-wrapper">
+            <img src="./assets/joinha.svg" alt="Gostou? Clique aqui" />
+            <img src="./assets/negativo.svg" alt="Não gostou? Clique aqui" />
+          </div>
+        </div>
+        <section>
+          <p>
+            Os gatos são animais fascinantes e cercados de mistérios. De
+            temperamento independente e misterioso, esses felinos são conhecidos
+            por sua agilidade, elegância e um comportamento muitas vezes
+            imprevisível. Contudo, recentemente, uma teoria tem ganhado espaço
+            na internet e entre teóricos de conspiração: seriam os gatos
+            astronautas?
+          </p>
+          <p>
+            A teoria sugere que os gatos não são animais terrestres, mas sim
+            seres extraterrestres enviados para realizar uma missão específica
+            em nosso planeta. Há relatos históricos que apontam para o fato de
+            que os gatos eram considerados seres sagrados em diferentes culturas
+            e até mesmo associados a figuras divinas. Isso poderia indicar que
+            os gatos têm uma origem muito mais mística do que se pensava
+            anteriormente.
+          </p>
+        </section>
+        <section>
+          <p>
+            Além disso, há teóricos que acreditam que os felinos possuem
+            habilidades telepáticas e são capazes de se comunicar com outras
+            espécies alienígenas. Essa crença baseia-se em relatos de pessoas
+            que afirmam terem visto gatos reagindo a estímulos que não são
+            perceptíveis aos seres humanos, ou até mesmo se comportando de
+            maneira incomum durante eventos astronômicos, como uma aurora
+            boreal. Esses e outros indícios foram interpretados como sinais de
+            que os gatos seriam seres interplanetários.
+          </p>
+        </section>
+        <aside>
           <h2>Artigos Relacionados</h2>
           <div class="card">
             <img
@@ -134,8 +131,9 @@
               história de superação.
             </p>
           </div>
-        </div>
-      </aside>
-      <footer>© 2023 - Rocketseat Explorer</footer>
+        </aside>
+      </div>
+    </main>
+    <footer>© 2023 - Rocketseat Explorer</footer>
   </body>
 </html>
